--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
         Please turn on wi-fi or 3g/4g.\n
         Please restart app.
     </string>
+    <string name="connecting">Connecting …</string>
+    <string name="success">Request success</string>
+    <string name="failure">Request failure</string>
 </resources>
